<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_accept_reject_ride"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.vave.getbike.activity.AcceptRejectRideActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
            android:text="@string/get_bike"
            android:textColor="@android:color/white"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ride Requested By"/>

        <TextView
            android:id="@+id/rideRequestedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ride Requested By"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Current Location"/>

        <TextView
            android:id="@+id/rideRequestAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Destination"/>

        <TextView
            android:id="@+id/rideDestinationAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textColor="@color/black"
            android:textSize="17sp"/>


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Mobile Number"/>

        <TextView
            android:id="@+id/rideRequestMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mobile Number"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Mode Of Payment"/>

        <TextView
            android:id="@+id/rideModeOfPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mode Of Payment"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="Lat Lng"/>

        <TextView
            android:id="@+id/rideRequestLatLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitude Longitude"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Ride Requested Time"/>

        <TextView
            android:id="@+id/rideRequestAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ride Requested Time"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/acceptRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="  Accept Ride  "
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/rejectRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="Reject Ride"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/callRideRequestor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="Call Customer"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
