...
            android:text="Navigation"
            android:textColor="@color/white"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/reached_customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/get_bike_black"
            android:text="Reached customer"
...
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/thick_green"
            android:gravity="center"
...
