...
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_user_already_exists">User already exists. Please try logging in.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_ride_is_not_valid">Ride is not valid</string>
    <string name="error_ride_is_already_allocated">Ride is already allocated to someone else.</string>
    <string name="error_ride_is_cancelled_by_customer">Ride is cancelled by customer</string>
    <string name="error_ride_is_rejected">Ride is rejected.</string>
    <string name="error_ride_is_expired">Ride is expired.</string>
    <string name="error_failed_to_accept_ride">Error failed to accept ride. Probably it is already allocated to someone else or you already have a previous ride in progress.</string>
    <string name="success_account_details">Account details successfully updated.</string>
...
