...
            android:textColor="@color/colorPrimary"
            android:text="  HAIL   "
            android:id="@+id/hail_model_text_view"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/refreshOpenRides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="Refresh"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/openRides"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

</LinearLayout>
...
